[project]
authors = [
  {email = "crosenth@gmail.com"},
  {name = "Chris Rosenthal"}
]
classifiers = [
"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
"Environment :: Console",
"Intended Audience :: End Users/Desktop",
"Intended Audience :: Science/Research",
"Operating System :: OS Independent",
"Programming Language :: Python :: 3 :: Only"
]
dependencies = ["biopython>=1.68", "retrying>=1.3.3"]
description = "Multithreaded ncbi edirect and ftract"
keywords = [
  "bioinformatics", "ncbi", "edirect", "entrez", "multiprocessing", "multithreading"
]
license = {file = "LICENSE"}
name = "medirect"
readme = "README.rst"
requires-python = ">=3.9"
version = "0.25.0"

[project.urls]
repository = "https://github.com/crosenth/medirect"

[project.scripts]
ftract = "ftract:run"
mefetch = "mefetch:run"
