[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {email = "crosenth@gmail.com", name = "Chris Rosenthal"}
]
classifiers = [
"Environment :: Console",
"Intended Audience :: End Users/Desktop",
"Intended Audience :: Science/Research",
"Operating System :: OS Independent",
"Programming Language :: Python :: 3 :: Only"
]
dependencies = ["biopython>=1.68", "retrying>=1.3.3"]
description = "Multithreaded ncbi edirect and ftract"
dynamic = ['version']
keywords = [
  "bioinformatics", "ncbi", "edirect", "entrez", "multiprocessing", "multithreading"
]
license = "GPL-3.0-only"
name = "medirect"
readme = "README.rst"
requires-python = ">=3.9"

[project.urls]
repository = "https://github.com/crosenth/medirect"

[project.scripts]
ftract = "ftract:run"
mefetch = "mefetch:run"

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools-scm
